Created hierachy for movement and separated null movement and shift to sprint

--- a/config.cfg
+++ b/config.cfg
@@ -17,6 +17,7 @@ bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
 bind "i" "show_loadout_toggle"
+bind "k" "+voicerecord"
 bind "m" "teammenu"
 bind "q" "lastinv"
 bind "r" "+reload"
@@ -43,9 +44,8 @@ bind "F5" "jpeg"
 bind "F6" "save quick"
 bind "F7" "load quick"
 bind "F10" "quit prompt"
-bind "MOUSE1" "+attack;-attack;+attack;-attack;+attack;-attack;"
+bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE4" "+voicerecord"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
 bind "A_BUTTON" "+jump"
@@ -407,7 +407,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "Sky_cs15_daylight04_hdr"
+sv_skyname "vertigoBlue_hdr"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
